fix: align radio group item indicator, package.json dep

--- a/src/components/RadioGroup/RadioGroup.module.scss
+++ b/src/components/RadioGroup/RadioGroup.module.scss
@@ -20,6 +20,10 @@
 
   position: relative;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 1rem;
   height: 1rem;
   margin-right: 0.75rem;
